<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SearchServerActivity">

  <ImageView
      android:id="@+id/background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@drawable/desert"
      android:scaleType="centerCrop"/>

  <View
      android:id="@+id/dimmer_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#C000"
      android:alpha="0"
      android:visibility="gone"
      />

  <LinearLayout
      android:visibility="gone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:id="@+id/found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </LinearLayout>

  <com.github.clans.fab.FloatingActionMenu
      android:id="@+id/menu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_marginRight="10dp"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      app:layout_behavior="com.zireck.remotecraft.view.custom.FloatingActionMenuBehavior"
      fab:menu_fab_size="normal"
      fab:menu_showShadow="true"
      fab:menu_shadowColor="#66000000"
      fab:menu_shadowRadius="4dp"
      fab:menu_shadowXOffset="1dp"
      fab:menu_shadowYOffset="3dp"
      fab:menu_colorNormal="@color/colorPrimary"
      fab:menu_colorPressed="@color/colorPrimaryDark"
      fab:menu_colorRipple="#99FFFFFF"
      fab:menu_animationDelayPerItem="50"
      fab:menu_icon="@drawable/ic_magnify_white"
      fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
      fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
      fab:menu_labels_paddingTop="4dp"
      fab:menu_labels_paddingRight="8dp"
      fab:menu_labels_paddingBottom="4dp"
      fab:menu_labels_paddingLeft="8dp"
      fab:menu_labels_padding="8dp"
      fab:menu_labels_textColor="#FFFFFF"
      fab:menu_labels_textSize="14sp"
      fab:menu_labels_cornerRadius="3dp"
      fab:menu_labels_colorNormal="#333333"
      fab:menu_labels_colorPressed="#444444"
      fab:menu_labels_colorRipple="#66FFFFFF"
      fab:menu_labels_showShadow="true"
      fab:menu_labels_singleLine="true"
      fab:menu_labels_ellipsize="end"
      fab:menu_labels_maxLines="1"
      fab:menu_labels_position="left"
      fab:menu_openDirection="up"
      fab:menu_backgroundColor="@android:color/transparent"
      fab:menu_fab_show_animation="@anim/fab_scale_up"
      fab:menu_fab_hide_animation="@anim/fab_scale_down">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus_network_white"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorPrimaryDark"
        fab:fab_colorRipple="#99FFFFFF"
        fab:fab_size="normal"
        fab:fab_label="@string/enter_ip" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_qrcode_scan_white"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorPrimaryDark"
        fab:fab_colorRipple="#99FFFFFF"
        fab:fab_size="normal"
        fab:fab_label="@string/scan_qr" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wifi_white"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorPrimaryDark"
        fab:fab_colorRipple="#99FFFFFF"
        fab:fab_size="normal"
        fab:fab_label="@string/scan_wifi" />

  </com.github.clans.fab.FloatingActionMenu>

  <com.github.ybq.android.spinkit.SpinKitView
      android:id="@+id/loading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:visibility="gone"
      app:SpinKit_Color="@color/colorPrimaryDark"
      style="@style/SpinKitView.Large.Circle"
      />

  <com.dlazaro66.qrcodereaderview.QRCodeReaderView
      android:id="@+id/qrCodeReaderView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"/>

  <ImageButton
      android:id="@+id/close_camera_button"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="top|start"
      android:background="@color/md_grey_800"
      android:src="@drawable/ic_close_white"
      android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
