<resources>
  <string name="exception_generic">Unknown error.</string>
  <string name="exception_no_internet_connection">No Internet connection.</string>
  <string name="exception_no_response">No response.</string>
  <string name="exception_invalid_server">Invalid server.</string>

  <string name="scan_wifi">Scan Wi-Fi</string>
  <string name="scan_qr">Scan QR Code</string>
  <string name="enter_ip">Enter Address</string>

  <string name="enter_network_address_dialog_title">Enter Network Address</string>
  <string name="enter_network_address_dialog_ip_hint">IP Address</string>
  <string name="enter_network_address_dialog_port_hint">Port (Default: 9998)</string>
  <string name="enter_network_address_dialog_button_accept">Search</string>
  <string name="enter_network_address_dialog_button_cancel">Cancel</string>

  <string name="permission_rationale_title">Permission Request</string>

  <string name="permission_access_wifi_state_rationale_title">@string/permission_rationale_title</string>
  <string name="permission_access_wifi_state_rationale_message">You need to allow this permission to search in your WiFi.</string>
  <string name="permission_access_wifi_state_denied_message">Allow WiFi state permission in app settings</string>

  <string name="permission_camera_rationale_title">@string/permission_rationale_title</string>
  <string name="permission_camera_rationale_message">You need to allow the camera permission.</string>
  <string name="permission_camera_denied_message">Allow camera permission in app settings</string>

  <string name="wifi_state_excellent">Excellent</string>
  <string name="wifi_state_excellent_description">Your connection is perfect. Start searching for your server now.</string>

  <string name="wifi_state_good">Good</string>
  <string name="wifi_state_good_descripiont">Your connection seems very stable. Start searching for your server now.</string>

  <string name="wifi_state_ok">Ok</string>
  <string name="wifi_state_ok_description">Your connection seems ok. Start searching for your server now.</string>

  <string name="wifi_state_poor">Poor</string>
  <string name="wifi_state_poor_description">Your WiFi connection looks weak. You can search for your server now but the connection will suffer.</string>

  <string name="wifi_state_bad">Bad</string>
  <string name="wifi_state_bad_description">Your WiFi connection doesn\'t look like its suitable for establishing a connection. We suggest you to search for better coverage before searching for your server.</string>

  <string name="wifi_state_terrible">Terrible</string>
  <string name="wifi_state_terrible_description">You have a terrible WiFi reception. We suggest you to search for better coverage before searching for your server.</string>

  <string name="wifi_state_no_connection">No connection</string>
  <string name="wifi_state_no_connection_description">Your WiFi connection is not available. Make sure you enable it in the settings.</string>

  // Server Found Activity
  <string name="server_found_title">Server found</string>
  <string name="server_found_network_info">%1$s (%2$s)</string>
  <string name="server_found_os_info">%1$s (%2$s)</string>
  <string name="server_found_connect">Connect</string>
</resources>
